# mrg32k3a-numba

./: LICENSE  README.md  pyproject.toml
src/mrg32k3a_numba/: __init__.py  mrg32k3a_numba.py
src/mrg32k3a_numba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
